log
Wed 24 Apr 2024 03:30:34 PM UTC: 
 tests:  0|6
total_score: 0/70
a93bd7b
Wed 24 Apr 2024 03:33:45 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
01f4db6
Wed 24 Apr 2024 03:37:25 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|4
total_score: 30/70
687bf25
Wed 24 Apr 2024 03:44:20 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:78:6: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   78 |   if(map==NULL)return NULL;
      |      ^~~
      |      mapa
hashmap.c:78:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
90cf862
Wed 24 Apr 2024 03:45:07 PM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  6|3
total_score: 40/70
6636643
Wed 24 Apr 2024 03:52:22 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
0029f55
Wed 24 Apr 2024 03:55:32 PM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c:98:1: error: expected identifier or ‘(’ before ‘}’ token
   98 | }
      | ^
Compilation failed
07229a1
Wed 24 Apr 2024 03:56:29 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|2
total_score: 50/70
36037e3
Wed 24 Apr 2024 04:05:32 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:106:7: error: ‘longi’ undeclared (first use in this function)
  106 |   for(longi=0;i< map->capacity;i++){
      |       ^~~~~
hashmap.c:106:7: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:106:15: error: ‘i’ undeclared (first use in this function)
  106 |   for(longi=0;i< map->capacity;i++){
      |               ^
Compilation failed
7d1c9ee
Wed 24 Apr 2024 04:07:35 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:118:41: error: statement with no effect [-Werror=unused-value]
  118 |   for(long i = 0; i < map->current+1; i < map->capacity; i++){
      |                                       ~~^~~~~~~~~~~~~~~
hashmap.c:118:56: error: expected ‘)’ before ‘;’ token
  118 |   for(long i = 0; i < map->current+1; i < map->capacity; i++){
      |      ~                                                 ^
      |                                                        )
cc1: all warnings being treated as errors
Compilation failed
4d511b9
